--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,8 +1,13 @@
 parserOptions:
   ecmaVersion: 2018
+  project: 'tsconfig.json'
+  tsconfigRootDir: '.'
 
 env:
   es6: true
   node: true
 
 extends: 'htmlacademy/node'
+parser: '@typescript-eslint/parser'
+plugins:
+  - '@typescript-eslint'
