--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "Buy, Sell",
   "main": "./src/service/service.ts",
   "scripts": {
+    "start": "ts-node ./src/service/service.ts",
     "test": "npm run eslint",
     "eslint": "eslint --ext .ts src/"
   },
   "author": "Artem Beresnev",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "13.5.0",
+    "@typescript-eslint/eslint-plugin": "2.17.0",
+    "@typescript-eslint/parser": "2.17.0",
     "eslint": "6.8.0",
-    "eslint-config-htmlacademy": "0.5.2"
+    "eslint-config-htmlacademy": "0.5.2",
+    "package-json-type": "1.0.3",
+    "typescript": "3.7.5"
   }
 }
